# Lab_2.21

./: README.md  ind.db  prim1.db  pyproject.toml
program/: hard.py  ind.py  prim1.py
